@@ -12,6 +12,9 @@ jpackage --type app-image \
 	--name PAWS \
 	--main-jar paws.jar \
 	--main-class org.sil.paws.MainApp \
+	--java-options --enable-native-access=javafx.graphics \
+	--java-options --enable-native-access=javafx.web \
+	--java-options --enable-native-access=com.sun.jna \
 	--icon input/PAWS.png \
 	--module-path jmods \
 	--vendor "SIL International"
